# LocalVoice-Agent

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  SPEC.md  compose.yml  docker-compose.yml  ideia.md  pyproject.toml
client/: index.html
client/css/: styles.css
client/js/: app.js
docs/: architecture.md
src/: main.py
src/agents/: assistant.py  conversation_agent.py  factory.py  system_agent.py  team.py
src/core/: capabilities.py  config.py  instructions.py  schemas.py  speech_text.py
src/gateway/: api.py  app.py  connections.py  controller.py  routes.py  tls.py
src/tools/: assistant_tools.py  tts.py
src/ui/: app.py  components.py
src/worker/: app.py  controller.py
tests/integration/: test_gateway.py
tests/unit/: test_agents.py  test_capabilities.py  test_config.py  test_connections.py  test_gateway_controller.py  test_schemas.py  test_speech_text.py  test_tls.py  test_tts.py  test_worker_controller.py
voices/: README.md
