[project]
name = "localvoice-agent"
version = "0.1.0"
description = "Assistente de voz assincrono, local e orientado a eventos (FastAPI + FastStream + Agno + Piper TTS)."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agno>=1.0",
    "fastapi>=0.115",
    "faststream[redis]>=0.5",
    "ollama>=0.4",
    "openai>=2.45.0",
    "piper-tts>=1.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
localvoice = "src.main:main"

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pre-commit>=3.7",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]
ui = [
    "streamlit>=1.36",
    "websocket-client>=1.8",
]
tls = [
    "cryptography>=42",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
# Silencia apenas warnings de deprecacao internos de terceiros (Starlette/FastStream),
# mantendo visiveis os warnings originados no nosso proprio codigo.
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
    "ignore:'asyncio.iscoroutinefunction' is deprecated",
    "ignore:Specifying 'lifespan_context' manually is no longer necessary",
]
